--- a/css/contact.css
+++ b/css/contact.css
@@ -31,6 +31,7 @@
             font-weight: 500;
             letter-spacing: 2px;
             text-transform: uppercase;
+            margin-top: 50px;
             margin-bottom: 15px;
             display: inline-block;
             position: relative;
