--- a/css/edit.css
+++ b/css/edit.css
@@ -557,10 +557,7 @@ html {
   transform: translateZ(0);
 }
 
-/* Remove plus icon from hamburger menu */
-.menu-item-has-children > a::after {
-  content: none !important;
-}
+
 
 /* Force header tint to fill edge-to-edge on all devices */
 .header__bar,
@@ -576,3 +573,13 @@ html {
   padding-right: 0 !important;
 }
 
+/* Remove plus icon from hamburger menu */
+.menu-item-has-children > a::after {
+  content: none !important;
+}
+
+@media (max-width: 991px) {
+  .menu-item-has-children > a::after {
+    content: none !important;
+  }
+}
