--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,9 @@ button.slick-next {
   }
 }
 
-.header__bar {
+/* .header__bar {
   padding: 10px 0;
-}
+} */
 
 /* Ensure slider container is positioned for arrow alignment */
 .slider {
